Fixed styling of Edit Profile dlg. Made it come up on IE 6/7/8

--- a/public/stylesheets/js_dialog.css
+++ b/public/stylesheets/js_dialog.css
@@ -246,7 +246,12 @@ hr.linkdlg_hr {
 
 .edit_profile_textarea {
 	height: 200px;
-	width: 300px;
+	width: 465px;
+	margin-bottom:25px;
+}
+
+.edit_profile_image img {
+	padding-bottom:5px;
 }
 
 .edit_facet_input {
